# Chess-GUI-for-UCI

./: .gitignore  CMakeLists.txt  Makefile  README.md  chess-gui
src/: board.cpp  board.hpp  configuration.cpp  configuration.hpp  main.cpp  piece.cpp  piece.hpp  pieceValues.hpp  sfml-app  values.hpp
src/Resources/: targetSquareGenerator.py
